--- a/app/views/admin/sports/index.html.erb
+++ b/app/views/admin/sports/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Sports#index</h1>
-<p>Find me in app/views/sports/index.html.erb</p>
+<h1>Sports</h1>
+<ul>
+	<% @sports.each do |sport| %>
+	<li><%= sport.name %></li>
+	<% end %>
+</ul>
