--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Entries#index</h1>
-<p>Find me in app/views/entries/index.html.erb</p>
+<h1>Entries</h1>
+<ul>
+	<% @entries.each do |entry| %>
+	<li><%= entry.title %></li>
+	<% end %>
+</ul>
