committing all code to manage users, sessions, admin controller and styling

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Entries</h1>
-<ul>
-	<% @entries.each do |entry| %>
-	<li><%= entry.title %></li>
-	<% end %>
-</ul>
+<div id="box">
+	<ul>
+		<% @entries.each do |entry| %>
+		<li><%= entry.title %></li>
+		<% end %>
+	</ul>
+</div>
