Adding adding sports option in admin interface

--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -2,4 +2,5 @@
 <div id="box">
 	<h2>Number of <%= link_to 'sports', admin_sports_url %></h2>
 	<p><%= Sport.all.size %></p>
+	<p><%= link_to 'add a sport', new_admin_sport_url %></p>
 </div>
