Adding entries functionality and refactoring of page titles

--- a/app/views/about/termsandconditions.html.erb
+++ b/app/views/about/termsandconditions.html.erb
@@ -1,3 +1,4 @@
+<% page_title "Terms and conditions" %>
 <h1>terms <span class="highlight">&amp;</span> conditions</h1>
 <div id="box">
 	<p>By using the <%= root_url %> web site (“Service”), a service of Ekynoxe, you are agreeing to be bound by the following terms and conditions (“Terms of Service”).</p>
