--- a/app/views/about/whatsitmadeof.html.erb
+++ b/app/views/about/whatsitmadeof.html.erb
@@ -1,3 +1,4 @@
+<% page_title "What is it made of?" %>
 <h1><span class="highlight">what's it made of?</span></h1>
 <div id="box">
 	<h2>Back side</h2>
