--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -1,3 +1,4 @@
+<% page_title "Admin pages" %>
 <h1><span class="orange">Admin</span> pages</h1>
 <div id="box">
 	<h2>Number of <%= link_to 'sports', admin_sports_url %></h2>
