--- a/app/views/admin/sports/new.html.erb
+++ b/app/views/admin/sports/new.html.erb
@@ -1,3 +1,4 @@
+<% page_title "Add a sport" %>
 <h1>Add a <span class="hilighted">sport</span>.</h1>
 <div id="box">
 <p><%= link_to 'back to admin home', admin_url %></p>	
