--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Vytamin</title>
+  <title>Vytamin :: A simple sports log<%= page_title %></title>
   <meta name="description" content="A simple sports log">
   <meta name="author" content="Mathieu Davy">
 
