cosmetic highlights fix

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,5 +1,5 @@
 <% page_title "Entries" %>
-<h1>Entries</h1>
+<h1><span class="highlight">Entries</span></h1>
 <div id="box">
 	<p><%= link_to "New Entry", new_entry_path %></p>
 	<p><%= will_paginate @entries %></p>
