--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -1,7 +1,17 @@
 <% page_title "Admin pages" %>
 <h1><span class="orange">Admin</span> pages</h1>
 <div id="box">
-	<h2>Number of <%= link_to 'sports', admin_sports_url %></h2>
-	<p><%= Sport.all.size %></p>
-	<p><%= link_to 'add a sport', new_admin_sport_url %></p>
+	<h2><%= link_to 'Admin sports', admin_sports_url %></h2>
+	<ul>
+		<% Sport.all.each do |sport| %>
+		<li><%= sport.name %></li>
+		<% end %>
+	</ul>
+	
+	<h2><%= link_to 'Admin users', admin_users_url %></h2>
+	<ul>
+		<% User.all.each do |user| %>
+		<li><%= user.full_name %></li>
+		<% end %>
+	</ul>
 </div>
